--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -47,7 +47,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/img_sell"
+                        android:id="@+id/img_store"
                         android:layout_width="match_parent"
                         android:layout_height="130dp"
                         android:layout_marginLeft="5dp"
