20180528-pjh Sell Machine 수정 및 추가

--- a/app/src/main/res/layout/activity_buy_write.xml
+++ b/app/src/main/res/layout/activity_buy_write.xml
@@ -235,7 +235,8 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textColorHint="@color/text_gray"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:inputType="number"/>
             </LinearLayout>
             //구매자 주소
             <LinearLayout
