--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -205,12 +205,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/layout_machine"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="6dp"
                     android:layout_weight="1"
                     android:background="#333a4a"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:onClick="onClick">
 
                     <TextView
                         android:layout_width="wrap_content"
