--- a/app/src/main/res/layout/activity_sell_write.xml
+++ b/app/src/main/res/layout/activity_sell_write.xml
@@ -112,7 +112,8 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textColorHint="@color/text_hint"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:inputType="number"/>
             </LinearLayout>
 
             <LinearLayout
@@ -369,7 +370,8 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textColorHint="@color/text_gray"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:inputType="number"/>
             </LinearLayout>
             //구매자 주소
             <LinearLayout
