--- a/app/src/main/res/layout/activity_promotion_focus.xml
+++ b/app/src/main/res/layout/activity_promotion_focus.xml
@@ -21,19 +21,15 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/img"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:scaleType="fitXY" />
-                    <VideoView
-                        android:id="@+id/vv"
+                        android:id="@+id/img_video"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:layout_gravity="center"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:background="@color/black"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageView
                     android:id="@+id/player"
@@ -45,15 +41,6 @@
                     android:src="@drawable/play"
                     android:visibility="visible"/>
 
-                <ProgressBar
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:progress="50"
-                    android:progressDrawable="@drawable/custom_progressbar"
-                    android:id="@+id/Progressbar"
-                    android:visibility="gone"/>
             </RelativeLayout>
 
             <LinearLayout
