--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -23,7 +23,7 @@
             android:src="@drawable/back" />
 
         <ImageView
-            android:id="@+id/img"
+            android:id="@+id/img_deal"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -50,15 +50,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <VideoView
-                        android:id="@+id/vv"
+                    <ImageView
+                        android:id="@+id/img_video"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:layout_gravity="center"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:background="@color/black"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageView
                     android:id="@+id/player"
@@ -70,15 +71,6 @@
                     android:src="@drawable/play"
                     android:visibility="visible"/>
 
-                <ProgressBar
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:progress="50"
-                    android:progressDrawable="@drawable/custom_progressbar"
-                    android:id="@+id/Progressbar"
-                    android:visibility="gone"/>
             </RelativeLayout>
 
             <TextView
