--- a/app/src/main/res/layout/activity_buy_write.xml
+++ b/app/src/main/res/layout/activity_buy_write.xml
@@ -176,7 +176,7 @@
                     android:hint="메모 작성"
                     android:includeFontPadding="false"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/text_gray"
+                    android:textColorHint="@color/text_hint"
                     android:textSize="18sp" />
             </LinearLayout>
 
