--- a/app/src/main/res/layout/activity_machine_focus.xml
+++ b/app/src/main/res/layout/activity_machine_focus.xml
@@ -490,7 +490,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:id="@+id/img_call"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -498,7 +498,14 @@
         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
         android:includeFontPadding="false"
         android:onClick="onClick"
-        android:text="바로 전화 문의"
         android:textColor="@color/point_gold"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/call_direct" />
+    </LinearLayout>
 </LinearLayout>
