--- a/app/src/main/res/layout/activity_others.xml
+++ b/app/src/main/res/layout/activity_others.xml
@@ -227,4 +227,21 @@
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/img_call"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/point_navy"
+        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+        android:includeFontPadding="false"
+        android:textColor="@color/point_gold"
+        android:textSize="20sp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/direct_call_company" />
+    </LinearLayout>
 </LinearLayout>
