--- a/app/src/main/res/layout/activity_buy_focus.xml
+++ b/app/src/main/res/layout/activity_buy_focus.xml
@@ -21,7 +21,7 @@
             android:onClick="onClick"/>
 
         <ImageView
-            android:id="@+id/img"
+            android:id="@+id/img_deal"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -76,6 +76,7 @@
                     android:id="@+id/txt_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/notosanscjkkr_medium_cus"
                     android:gravity="center_vertical"
@@ -254,6 +255,7 @@
                                 android:src="@drawable/circle_black" />
 
                             <TextView
+                                android:id="@+id/txt_amount2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
@@ -443,7 +445,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:id="@+id/img_call"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -451,7 +453,14 @@
         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
         android:includeFontPadding="false"
         android:onClick="onClick"
-        android:text="바로 전화 문의"
         android:textColor="@color/point_gold"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/call_direct" />
+    </LinearLayout>
 </LinearLayout>
