--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,11 +53,11 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:fontFamily="@font/notosanscjkkr_demilight_cus"
-                    android:hint="상호명"
+                    android:hint="핸드폰번호"
                     android:includeFontPadding="false"
                     android:textColor="@color/white"
                     android:textColorHint="#445272"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
             //비밀번호 입력
