--- a/app/src/main/res/layout/activity_promotion_focus.xml
+++ b/app/src/main/res/layout/activity_promotion_focus.xml
@@ -29,7 +29,8 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:background="@color/black"/>
+                        android:background="@color/black"
+                        android:scaleType="centerCrop"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageView
                     android:id="@+id/player"
@@ -197,16 +198,19 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/img_call"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/point_navy"
+        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+        android:includeFontPadding="false"
+        android:textColor="@color/point_gold"
+        android:textSize="20sp"
         android:gravity="center">
 
         <ImageView
-            android:layout_width="150dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
             android:adjustViewBounds="true"
             android:src="@drawable/call_direct" />
     </LinearLayout>
