--- a/app/src/main/res/layout/activity_sell_focus.xml
+++ b/app/src/main/res/layout/activity_sell_focus.xml
@@ -133,6 +133,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/txt_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -278,6 +279,7 @@
                                 android:src="@drawable/circle_black" />
 
                             <TextView
+                                android:id="@+id/txt_amount2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
@@ -296,7 +298,7 @@
                         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="희망 구매갯수"
+                        android:text="판매 갯수"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -467,7 +469,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:id="@+id/img_call"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -475,7 +477,14 @@
         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
         android:includeFontPadding="false"
         android:onClick="onClick"
-        android:text="바로 전화 문의"
         android:textColor="@color/point_gold"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/call_direct" />
+    </LinearLayout>
 </LinearLayout>
