--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:layout_weight="0.7"
         android:adjustViewBounds="true"
         android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp"
-        android:src="@drawable/start1"
-        android:layout_weight="1"/>
+        android:src="@drawable/start1" />
     <ImageView
         android:id="@+id/img_flash2"
         android:layout_width="match_parent"
@@ -28,5 +28,6 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:src="@drawable/start2"/>
 </LinearLayout>
