--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -59,7 +59,8 @@
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:background="@color/black"/>
+                        android:background="@color/black"
+                        android:scaleType="centerCrop"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageView
                     android:id="@+id/player"
@@ -350,52 +351,6 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:layout_width="70dp"
-                                android:layout_height="wrap_content"
-                                android:adjustViewBounds="true"
-                                android:src="@drawable/circle_black" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-                                android:includeFontPadding="false"
-                                android:text="12"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
-                        </RelativeLayout>
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-                        android:gravity="center"
-                        android:includeFontPadding="false"
-                        android:text="희망 구매갯수"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
-                </LinearLayout>
-
-                <LinearLayout
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -451,33 +406,6 @@
                     android:layout_marginBottom="20dp"
                     android:background="@color/white"
                     android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/notosanscjkkr_medium_cus"
-                            android:gravity="center"
-                            android:includeFontPadding="false"
-                            android:text="게임명"
-                            android:textColor="@color/text_gray"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/txt_buy_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/notosanscjkkr_medium_cus"
-                            android:gravity="center_vertical"
-                            android:includeFontPadding="false"
-                            android:text="동전교환기"
-                            android:textColor="@color/black"
-                            android:textSize="16sp" />
-                    </LinearLayout>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -562,15 +490,22 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:id="@+id/img_call"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/point_navy"
         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
         android:includeFontPadding="false"
         android:onClick="onClick"
-        android:text="바로 전화 문의"
         android:textColor="@color/point_gold"
-        android:textSize="26sp" />
+        android:textSize="20sp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/call_direct" />
+    </LinearLayout>
 </LinearLayout>
