--- a/app/src/main/res/layout/list_item_machine.xml
+++ b/app/src/main/res/layout/list_item_machine.xml
@@ -1,182 +1,189 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/line_gray" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="bottom"
-            android:text="글쓴이 제목영역입니다."
-            android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:layout_height="1dp"
+            android:background="@color/line_gray_bold" />
 
-        <ImageView
-            android:id="@+id/img_deal"
-            android:layout_width="240px"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:src="@drawable/deal_possible" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/img_machine"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/basic_banner" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+                android:id="@+id/img_deal"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:adjustViewBounds="true"
+                android:src="@drawable/deal_possible" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_machine"
+                    android:id="@+id/tv_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="동전교환기"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:includeFontPadding="false"
+                    android:text="글쓰기 제목 영역입니다."
                     android:textColor="@color/black"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:orientation="horizontal">
-
+                    android:textSize="20sp" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="500,000원"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"/>
+                    <ImageView
+                        android:id="@+id/img_machine"
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/basic_banner" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text=" / "
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="16dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="월"
-                        android:textAlignment="center"
-                        android:textColor="@color/text_gray"
-                        android:textSize="14dp" />
+                        <TextView
+                            android:id="@+id/tv_machine"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:text="게임기명"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:includeFontPadding="false"
+                                android:text="1,125,800원"
+                                android:textColor="@color/black"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:includeFontPadding="false"
+                                android:text=" / 월"
+                                android:textColor="@color/black"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_marginBottom="8dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_count"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="5dp"
+                                android:fontFamily="@font/notosanscjkkr_medium_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="서울"
+                                android:textColor="@color/black"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:layout_width="1dp"
+                                android:layout_height="14dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:background="@color/black" />
+
+                            <TextView
+                                android:id="@+id/tv_address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="5dp"
+                                android:fontFamily="@font/notosanscjkkr_medium_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="서울"
+                                android:textColor="@color/black"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:layout_width="1dp"
+                                android:layout_height="14dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:background="@color/black" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="10dp"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="안심거래"
+                                android:textColor="@color/point_skyblue"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <Button
+                            android:id="@+id/img_call"
+                            android:layout_width="match_parent"
+                            android:layout_height="35dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@color/point"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:onClick="onClick"
+                            android:text="바로 전화"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginTop="7dp"
-                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosanscjkkr_medium_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="12개보유"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosanscjkkr_medium_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="서울"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="안심거래"
-                    android:textColor="@color/point_skyblue"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-
-                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/call" />
+                    android:layout_height="7dp"
+                    android:background="@color/line_gray" />
             </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
