--- a/app/src/main/res/layout/activity_sell_focus.xml
+++ b/app/src/main/res/layout/activity_sell_focus.xml
@@ -21,7 +21,7 @@
             android:onClick="onClick"/>
 
         <ImageView
-            android:id="@+id/img_deal"
+            android:id="@+id/img_status"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
