--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -23,7 +23,7 @@
             android:src="@drawable/back" />
 
         <ImageView
-            android:id="@+id/img_deal"
+            android:id="@+id/img_status"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
