--- a/app/src/main/res/layout/list_item_local.xml
+++ b/app/src/main/res/layout/list_item_local.xml
@@ -16,20 +16,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/txt_game"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="bottom"
+                android:gravity="center"
                 android:text="동전교환기"
                 android:textSize="20dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="top"
-                android:text="게임기"
-                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -38,30 +32,32 @@
             android:layout_gravity="center"
             android:layout_weight="1">
 
-
-            <ImageView
-                android:id="@+id/img_call"
+            <SeekBar
+                android:id="@+id/seek_graph"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:background="@color/colorPrimaryDark"/>
+                android:progressDrawable="@drawable/progress_horizontal"
+                />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <TextView
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
+                android:id="@+id/txt_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical|right"
                 android:text="50"
                 android:textSize="30dp" />
 
             <TextView
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical|left"
                 android:text="대"
                 android:textSize="16dp" />
