--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,14 @@
         <item name="android:background">@null</item>
     </style>
 
-
+    <style name="CustSeekBar">
+    <item name="android:indeterminateOnly">false</item>
+    <item name="android:progressDrawable">@android:drawable/progress_horizontal</item>
+    <item name="android:indeterminateDrawable">@android:drawable/progress_horizontal</item>
+    <item name="android:minHeight">1dip</item>
+    <item name="android:maxHeight">30dp</item>
+    <item name="android:focusable">true</item>
+    </style>
+    <drawable name="transparent_background1">#31459b</drawable>
+    <drawable name="transparent_background2">#00000000</drawable>
 </resources>
