--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -476,6 +476,12 @@
                     android:background="@color/line_gray" />
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/layout_mygame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -749,7 +755,8 @@
                     android:visibility="invisible">
 
                 </LinearLayout>
-            </LinearLayout>
+
+            </LinearLayout></LinearLayout>
         </LinearLayout>
     </ScrollView>
 
