--- a/app/src/main/res/layout/fragment_fullimg.xml
+++ b/app/src/main/res/layout/fragment_fullimg.xml
@@ -6,6 +6,6 @@
     <ImageView
         android:id="@+id/img_full"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/black"/>
 </LinearLayout>
